[build-system]
build-backend = "maturin"
requires = ["maturin>=0.12,<0.13"]

[tool.maturin]
strip = true

[tool.isort]
multi_line_output = 0
line_length = 121
atomic = true
combine_as_imports = true
lines_between_types = 1

[tool.mypy]
python_version = "3.8"

show_column_numbers = true
show_error_codes = true

# causes mypy to crash
# https://github.com/python/mypy/issues/12257
# namespace_packages = true

# same as mypy --strict
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "humanize.*",
    "aiogithub.*",
    "fuzzywuzzy.*",
    "tensorflow.*",
    "jishaku.*",
    "PIL.*",
    "scipy.*",
    "matplotlib.*",
    "pygit2.*",
]
ignore_missing_imports = true
